--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,12 +19,14 @@ jobs:
           - 27.1
           - 27.2
           - 28.1
+          - 28.2
+          - 29.1
           - snapshot
       fail-fast: false
     steps:
     - uses: actions/checkout@v3
     - name: Set up Emacs
-      uses: purcell/setup-emacs@v3.0
+      uses: purcell/setup-emacs@master
       with:
         version: ${{ matrix.emacs_version }}
 
